# spike

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.html
results/models/lorenz/ablation/: lk0.01_ls0.0.pt  lk0.01_ls0.001.pt  lk0.01_ls0.01.pt  lk0.01_ls0.1.pt  lk0.01_ls1.0.pt  lk0.05_ls0.0.pt  lk0.05_ls0.001.pt  lk0.05_ls0.01.pt  lk0.05_ls0.1.pt  lk0.05_ls1.0.pt  lk0.1_ls0.0.pt  lk0.1_ls0.001.pt  lk0.1_ls0.01.pt  lk0.1_ls0.1.pt  lk0.1_ls1.0.pt  lk0.5_ls0.0.pt  lk0.5_ls0.001.pt  lk0.5_ls0.01.pt  lk0.5_ls0.1.pt  lk0.5_ls1.0.pt  lk1.0_ls0.0.pt  lk1.0_ls0.001.pt  lk1.0_ls0.01.pt  lk1.0_ls0.1.pt  lk1.0_ls1.0.pt
results/models/lorenz/pike_euler/: best_model.pt
results/models/lorenz/pike_expm/: best_model.pt
results/models/lorenz/pike_rk4/: best_model.pt
results/models/lorenz/pinn/: best_model.pt
results/models/lorenz/spike_expm/: best_model.pt
results/models/navier_stokes_2d/pike_euler/: best_model.pt
results/models/navier_stokes_2d/pike_expm/: best_model.pt
results/models/navier_stokes_2d/pike_rk4/: best_model.pt
scripts/: evaluate.py  generate_analysis_tables.py  train.py
spike/: __init__.py
spike/diffeq/: __init__.py  base.py
spike/diffeq/odes/: __init__.py  lorenz.py  seir.py
spike/diffeq/pdes/: __init__.py  advection.py  allen_cahn.py  burgers.py  burgers_2d.py  cahn_hilliard.py  heat.py  heat_2d.py  kdv.py  kuramoto_sivashinsky.py  navier_stokes_2d.py  reaction_diffusion.py  schrodinger.py  wave.py  wave_2d.py
spike/evaluation/: __init__.py  conservation.py  interpretability.py  koopman.py  lyapunov.py  metrics.py  ood.py  residuals.py
spike/integrators/: __init__.py  base.py  euler.py  expm.py  rk4.py
spike/losses/: __init__.py  combined.py  koopman.py  physics.py  sparsity.py
spike/models/: __init__.py  embedding.py  koopman.py  pike.py  pinn.py  spike.py
spike/training/: __init__.py  callbacks.py  samplers.py  trainer.py
(+7 files in other folders)
